<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msg_interfaces</name>
  <version>0.0.0</version>
  <description>Custom message interfaces for the SSLAM project</description>
  <maintainer email="guanliang.li@alumnos.upm.es">Guanliang Li</maintainer>
  <maintainer email="pedro.espinosa@upm.es">Pedro Espinosa Angulo</maintainer>
  <maintainer email="stapia@fi.upm.es">Santiago Tapia Fernández</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
